# hello-d3d12

./: .gitmodules  CMakeLists.txt  build.bat  run.bat
src/: CMakeLists.txt  main.c
